Fix T70466 Rendering error when drawing multi-material meshes